--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header class="header">
         <!-- navbar -->
         <div class="navbar">
-            <h2 class="company-name section title">G3 Architects</h2>
+            <h2 class="company-name section title">G3Architects</h2>
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Contact</a></li>
                     <li><a href="">Login</a></li>
                 </ul>
             </nav>
